This will make us rich

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,23 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    
-    <!-- 
+    <div> How to Survive Helio Training</div>
+
+
+
+    <header> Air Conditioning Testing Procedures</header>
+    <div> <div class="logo.svg"></div></div>
+
+
+
+    <div> <a href="https://www.peacefulmind.com/remedies-for-heat-exhaustion">Click Here for More Info</a>
+
+
+      <div id="ompany-name"
+
+
+      
+    <!
       To complete this challenge you will have to:
 
         1. Create a parent div with attribute id
